Actualizacion de modulos

--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -13,7 +13,7 @@ $exito: rgb(61, 201, 61);
 $peligro: rgb(187, 58, 58) ;
 $advertencia: rgb(228, 228, 65);
 $informacion: #9bc8ee;
-$claro: #B6EADA;
+$claro: #f2f7f8;
 $oscuro: #03001C;
 
 $color-solido: (
