--- a/scss/style.css
+++ b/scss/style.css
@@ -27,7 +27,7 @@
 }
 
 .cf-claro {
-  background-color: #B6EADA;
+  background-color: #f2f7f8;
 }
 
 .cf-oscuro {
@@ -97,7 +97,7 @@
 }
 
 .b-claro-1 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-width: 3px;
 }
@@ -151,7 +151,7 @@
 }
 
 .b-claro-2 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-width: 7px;
 }
@@ -205,7 +205,7 @@
 }
 
 .b-claro-3 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-width: 10px;
 }
@@ -259,7 +259,7 @@
 }
 
 .b-claro-4 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-width: 13px;
 }
@@ -313,7 +313,7 @@
 }
 
 .b-claro-5 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-width: 16px;
 }
@@ -367,7 +367,7 @@
 }
 
 .bar-claro-1 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-top-width: 3px;
 }
@@ -421,7 +421,7 @@
 }
 
 .bar-claro-2 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-top-width: 7px;
 }
@@ -475,7 +475,7 @@
 }
 
 .bar-claro-3 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-top-width: 10px;
 }
@@ -529,7 +529,7 @@
 }
 
 .bar-claro-4 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-top-width: 13px;
 }
@@ -583,7 +583,7 @@
 }
 
 .bar-claro-5 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-top-width: 16px;
 }
@@ -637,7 +637,7 @@
 }
 
 .bde-claro-1 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-right-width: 3px;
 }
@@ -691,7 +691,7 @@
 }
 
 .bde-claro-2 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-right-width: 7px;
 }
@@ -745,7 +745,7 @@
 }
 
 .bde-claro-3 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-right-width: 10px;
 }
@@ -799,7 +799,7 @@
 }
 
 .bde-claro-4 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-right-width: 13px;
 }
@@ -853,7 +853,7 @@
 }
 
 .bde-claro-5 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-right-width: 16px;
 }
@@ -907,7 +907,7 @@
 }
 
 .bab-claro-1 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-bottom-width: 3px;
 }
@@ -961,7 +961,7 @@
 }
 
 .bab-claro-2 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-bottom-width: 7px;
 }
@@ -1015,7 +1015,7 @@
 }
 
 .bab-claro-3 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-bottom-width: 10px;
 }
@@ -1069,7 +1069,7 @@
 }
 
 .bab-claro-4 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-bottom-width: 13px;
 }
@@ -1123,7 +1123,7 @@
 }
 
 .bab-claro-5 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-bottom-width: 16px;
 }
@@ -1177,7 +1177,7 @@
 }
 
 .biz-claro-1 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-left-width: 3px;
 }
@@ -1231,7 +1231,7 @@
 }
 
 .biz-claro-2 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-left-width: 7px;
 }
@@ -1285,7 +1285,7 @@
 }
 
 .biz-claro-3 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-left-width: 10px;
 }
@@ -1339,7 +1339,7 @@
 }
 
 .biz-claro-4 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-left-width: 13px;
 }
@@ -1393,7 +1393,7 @@
 }
 
 .biz-claro-5 {
-  border-color: #B6EADA;
+  border-color: #f2f7f8;
   border-style: solid;
   border-left-width: 16px;
 }
@@ -5452,72 +5452,72 @@
 .btn-sm-claro {
   height: 24.7058823529px;
   width: 60px;
-  background-color: #B6EADA;
-  color: #2fa581;
+  background-color: #f2f7f8;
+  color: #6da5b1;
   border-radius: 6px;
 }
 
 .btn-sm-claro:hover {
-  background-color: #2fa581;
+  background-color: #6da5b1;
   color: white;
 }
 
 .btn-sm-claro:active {
-  background-color: #195543;
+  background-color: #406e78;
   color: white;
 }
 
 .btn-m-claro {
   height: 49.4117647059px;
   width: 120px;
-  background-color: #B6EADA;
-  color: #2fa581;
+  background-color: #f2f7f8;
+  color: #6da5b1;
   border-radius: 12px;
 }
 
 .btn-m-claro:hover {
-  background-color: #2fa581;
+  background-color: #6da5b1;
   color: white;
 }
 
 .btn-m-claro:active {
-  background-color: #195543;
+  background-color: #406e78;
   color: white;
 }
 
 .btn-l-claro {
   height: 74.1176470588px;
   width: 180px;
-  background-color: #B6EADA;
-  color: #2fa581;
+  background-color: #f2f7f8;
+  color: #6da5b1;
   border-radius: 18px;
 }
 
 .btn-l-claro:hover {
-  background-color: #2fa581;
+  background-color: #6da5b1;
   color: white;
 }
 
 .btn-l-claro:active {
-  background-color: #195543;
+  background-color: #406e78;
   color: white;
 }
 
 .btn-xl-claro {
   height: 98.8235294118px;
   width: 240px;
-  background-color: #B6EADA;
-  color: #2fa581;
+  background-color: #f2f7f8;
+  color: #6da5b1;
   border-radius: 24px;
 }
 
 .btn-xl-claro:hover {
-  background-color: #2fa581;
+  background-color: #6da5b1;
   color: white;
 }
 
 .btn-xl-claro:active {
-  background-color: #195543;
+  background-color: #406e78;
   color: white;
 }
 
@@ -5844,7 +5844,7 @@
 }
 
 .contenedor-100 {
-  width: 100%;
+  width: calc(100% - 24px);
   height: 100%;
   margin: 0 auto;
   padding: 12px;
@@ -6225,7 +6225,7 @@
 }
 
 .color-font-claro {
-  color: #B6EADA;
+  color: #f2f7f8;
 }
 
 .color-font-oscuro {
@@ -6475,7 +6475,7 @@ svg {
 
 .etiqueta:hover {
   color: #3c91e6;
-  background-color: #B6EADA;
+  background-color: #f2f7f8;
   transform: translateY(10px);
 }
 
@@ -6534,7 +6534,7 @@ svg {
 
 .etiqueta-2:hover {
   color: rgb(183, 183, 202);
-  background-color: #B6EADA;
+  background-color: #f2f7f8;
   transform: translateX(20px);
 }
 
@@ -6837,11 +6837,11 @@ svg {
 .badge-3 {
   color: white;
   padding: 4px;
-  background-color: #B6EADA;
+  background-color: #f2f7f8;
 }
 
 .badge-3:hover {
-  background-color: #B6EADA;
+  background-color: #f2f7f8;
 }
 
 .badge-4 {
