--- a/scss/_contenedores.scss
+++ b/scss/_contenedores.scss
@@ -34,10 +34,9 @@ $breakpoint: (
 }
 
 .contenedor-100{
-    width: calc(100% - 24px);
+    width: 100%;
     height: 100%;
     margin: 0 auto;
-    padding: 12px;
     display: flex;
     flex-wrap: wrap;
 }
