--- a/scss/badges.scss
+++ b/scss/badges.scss
@@ -21,11 +21,12 @@ $het: 60px;
 
 
 color: $color-t;
-width: $wi;
-height: $het;
+width: 500px;
+height: 500px;
 padding: 4px;
 
 }
+
 .badge-2{
 
 
@@ -58,7 +59,7 @@ padding: 4px;
 
 
                
-                background-color: $claro;
+                background-color: gray;
                 
                 }
 
@@ -81,7 +82,6 @@ padding: 4px;
        
                         padding: 4px;
                         border-radius: $br;
-                        box-shadow: $shadow-rgb1;
                         
                      
                         
