--- a/scss/style.css
+++ b/scss/style.css
@@ -5844,10 +5844,9 @@
 }
 
 .contenedor-100 {
-  width: calc(100% - 24px);
+  width: 100%;
   height: 100%;
   margin: 0 auto;
-  padding: 12px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -6476,7 +6475,7 @@ svg {
 .etiqueta:hover {
   color: #3c91e6;
   background-color: #f2f7f8;
-  transform: translateY(10px);
+  transform: translateY(5px);
 }
 
 .color {
@@ -6816,8 +6815,8 @@ svg {
 
 .badge-1 {
   color: white;
-  width: 60px;
-  height: 60px;
+  width: 500px;
+  height: 500px;
   padding: 4px;
 }
 
@@ -6841,7 +6840,7 @@ svg {
 }
 
 .badge-3:hover {
-  background-color: #f2f7f8;
+  background-color: gray;
 }
 
 .badge-4 {
@@ -6855,7 +6854,6 @@ svg {
   color: white;
   padding: 4px;
   border-radius: 10px;
-  box-shadow: 2px 2px 8px 0 rgb(209, 102, 221), 4px 4px 16px 0 #d66, 0px 0px 24px 2px rgb(221, 197, 102);
 }
 
 .-link-bad {
