--- a/scss/style.css
+++ b/scss/style.css
@@ -6443,7 +6443,7 @@ svg {
 .fondo-menu {
   width: 100%;
   height: 9vh;
-  background-color: rgb(255, 255, 255);
+  background-color: #e2e3d9;
 }
 
 .navbar {
@@ -6469,12 +6469,12 @@ svg {
 
 .t-none {
   text-decoration: none;
-  color: black;
+  color: rgb(255, 255, 255);
 }
 
 .etiqueta:hover {
   color: #3c91e6;
-  background-color: #f2f7f8;
+  background-color: rgb(124, 121, 121);
   transform: translateY(5px);
 }
 
@@ -6532,7 +6532,7 @@ svg {
 }
 
 .etiqueta-2:hover {
-  color: rgb(183, 183, 202);
+  color: rgb(255, 255, 255);
   background-color: #f2f7f8;
   transform: translateX(20px);
 }
