--- a/scss/style.css
+++ b/scss/style.css
@@ -6891,4 +6891,15 @@ svg {
   background-color: #301E67;
 }
 
+.fot {
+  background-color: gray;
+  padding: 1em 0;
+  text-align: center;
+  position: absolute;
+  letter-spacing: 0.2em;
+  margin-bottom: 1em;
+  bottom: 0;
+  width: 100%;
+}
+
 /*# sourceMappingURL=style.css.map */
