--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -202,21 +202,35 @@ color: black;
 }
     
 
-//mMENU 3
-.menu-vertical{
-    background-color:$primario ;
-    width: 19.7%;
-    height: 95%;
-    margin-top: 9vh;
-    }
-    
-    .link-s{
-    text-decoration: none;
-    text-align: justify;
-    padding: $mg;
-    color: black;
-    
-    }
-    .link-s:hover{
-        background-color: $bg2;
-    }
+.mtama{
+
+    width: 100%;
+    height:auto;
+    display: flex;
+}
+
+.nvbar-3{
+
+width: 20%;
+background-color: gray;
+text-align: center;
+
+}
+
+.link-{
+
+text-decoration: none;
+color: rgb(255, 255, 255);
+font-size: 18px;
+letter-spacing: 2px;
+display: list-item;
+padding: 20px;
+border-top: 1px solid black ;
+border-bottom: 1px solid black ;
+text-align: center;
+}
+.link-:hover{
+
+background-color: rgb(24, 21, 21);
+
+}
