--- a/scss/style.css
+++ b/scss/style.css
@@ -6663,22 +6663,32 @@ svg {
     color: black;
   }
 }
-.menu-vertical {
-  background-color: #5B8FB9;
-  width: 19.7%;
-  height: 95%;
-  margin-top: 9vh;
+.mtama {
+  width: 100%;
+  height: auto;
+  display: flex;
 }
 
-.link-s {
+.nvbar-3 {
+  width: 20%;
+  background-color: gray;
+  text-align: center;
+}
+
+.link- {
   text-decoration: none;
-  text-align: justify;
-  padding: 16px;
-  color: black;
+  color: rgb(255, 255, 255);
+  font-size: 18px;
+  letter-spacing: 2px;
+  display: list-item;
+  padding: 20px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  text-align: center;
 }
 
-.link-s:hover {
-  background-color: #3c91e6;
+.link-:hover {
+  background-color: rgb(24, 21, 21);
 }
 
 .ocultar {
