--- a/scss/badges.scss
+++ b/scss/badges.scss
@@ -83,9 +83,20 @@ padding: 4px;
                         padding: 4px;
                         border-radius: $br;
                         
-                     
-                        
                         }
+
+                        .icono-{
+                            width: 60px;
+                            height: 60px;
+                            background-color: gray;
+                            padding: 3px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+ 
+
+                        }
+                     
 
                         .-link-bad{
 
